# tarasov-ledger

./: .env.example  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: upload.py
app/db/: database.py
app/models/: transaction.py
app/schemas/: transaction.py
app/services/: ocr.py  parser.py
